WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72754
Send an AXCheckedStateChanged notification when the aria-checked attribute changes.
https://bugs.webkit.org/show_bug.cgi?id=72754
Summary
Send an AXCheckedStateChanged notification when the aria-checked attribute ch...
David Tseng
Reported
2011-11-18 13:38:22 PST
Send an AXCheckedStateChanged notification when the aria-checked attribute changes.
Attachments
Patch
(1.64 KB, patch)
2011-11-18 13:50 PST
,
David Tseng
no flags
Details
Formatted Diff
Diff
Patch
(1.65 KB, patch)
2011-11-18 14:14 PST
,
David Tseng
no flags
Details
Formatted Diff
Diff
Patch
(7.50 KB, patch)
2011-11-29 15:38 PST
,
David Tseng
no flags
Details
Formatted Diff
Diff
Patch
(8.94 KB, patch)
2011-11-30 09:00 PST
,
David Tseng
no flags
Details
Formatted Diff
Diff
Patch
(9.56 KB, patch)
2011-11-30 09:46 PST
,
David Tseng
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
David Tseng
Comment 1
2011-11-18 13:50:49 PST
Created
attachment 115868
[details]
Patch
David Tseng
Comment 2
2011-11-18 13:57:55 PST
r?
WebKit Review Bot
Comment 3
2011-11-18 13:59:46 PST
Attachment 115868
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Tseng
Comment 4
2011-11-18 14:14:40 PST
Created
attachment 115872
[details]
Patch
chris fleizach
Comment 5
2011-11-18 14:37:29 PST
Comment on
attachment 115872
[details]
Patch need to add a layout test. also i think we should have a checkedStateChanged() method in axObjectCache() so that we don't expose the postNotification mechanism as much outside of accessibility code.
David Tseng
Comment 6
2011-11-29 15:38:51 PST
Created
attachment 117061
[details]
Patch
chris fleizach
Comment 7
2011-11-29 16:03:42 PST
Comment on
attachment 117061
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=117061&action=review
this test will likely fail on mac, windows and gtk so you should ask this test to those Skipped lists
> Source/WebCore/dom/Element.cpp:778 > } else if (attrName == aria_selectedAttr)
no brackets for the else if since it's a one liner
> LayoutTests/accessibility/aria-checkbox-sends-notification.html:18 > + return;
no need to special case out AXLayoutComplete. Just check that CheckedStateChange has been seen two times.
> LayoutTests/accessibility/aria-checkbox-sends-notification.html:20 > +
notificationCount++ should suffice (instead of += 1)
> LayoutTests/accessibility/aria-checkbox-sends-notification.html:26 > +
no need to add a test complete yourself. the js-test-post should do that
> LayoutTests/accessibility/aria-checkbox-sends-notification.html:41 > + }, 10);
i would remove this block. the test will timeout anyway if it doesn't finish, and this block may mask a true failure if we're not receiving the notifications something is wrong
> LayoutTests/accessibility/aria-checkbox-sends-notification.html:47 > + }, false);
there's no need to do this through an addEventListener. you can just call runTest() and it should work just fine
> LayoutTests/accessibility/aria-checkbox-sends-notification.html:57 > +
you're missing the js-test-post include here
David Tseng
Comment 8
2011-11-30 09:00:50 PST
Created
attachment 117202
[details]
Patch
Early Warning System Bot
Comment 9
2011-11-30 09:06:41 PST
Comment on
attachment 117202
[details]
Patch
Attachment 117202
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/10693224
chris fleizach
Comment 10
2011-11-30 09:07:47 PST
qt build failure /usr/bin/gold: /storage/WebKit-qt-ews/WebKitBuild/Release/Source/WebCore/release/libwebcore.a(Element.o): in function WebCore::Element::updateAfterAttributeChanged(WebCore::Attribute*):Element.cpp(.text._ZN7WebCore7Element27updateAfterAttributeChangedEPNS_9AttributeE+0xd0): error: undefined reference to 'WebCore::AXObjectCache::checkedStateChanged(WebCore::RenderObject*)' /usr/bin/gold: /storage/WebKit-qt-ews/WebKitBuild/Release/Source/WebCore/release/libwebcore.a(HTMLInputElement.o): in function WebCore::HTMLInputElement::setChecked(bool, bool):HTMLInputElement.cpp(.text._ZN7WebCore16HTMLInputElement10setCheckedEbb+0xc7): error: undefined reference to 'WebCore::AXObjectCache::checkedStateChanged(WebCore::RenderObject*)'
Gyuyoung Kim
Comment 11
2011-11-30 09:09:37 PST
Comment on
attachment 117202
[details]
Patch
Attachment 117202
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/10701082
David Tseng
Comment 12
2011-11-30 09:46:31 PST
Created
attachment 117206
[details]
Patch
David Tseng
Comment 13
2011-12-01 05:11:52 PST
r?
David Tseng
Comment 14
2011-12-02 11:05:46 PST
cq?
chris fleizach
Comment 15
2011-12-02 11:13:03 PST
There's no flag requesting anything for cq in the cq field
WebKit Review Bot
Comment 16
2011-12-02 14:35:08 PST
Comment on
attachment 117206
[details]
Patch Clearing flags on attachment: 117206 Committed
r101855
: <
http://trac.webkit.org/changeset/101855
>
WebKit Review Bot
Comment 17
2011-12-02 14:35:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug