Send an AXCheckedStateChanged notification when the aria-checked attribute changes. https://bugs.webkit.org/show_bug.cgi?id=72754

Patch by David Tseng <dtseng@google.com> on 2011-12-02
Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/aria-checkbox-sends-notification.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::checkedStateChanged):
* accessibility/AXObjectCache.h:
* dom/Element.cpp:
(WebCore::Element::updateAfterAttributeChanged):
* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::setChecked):

LayoutTests:

* accessibility/aria-checkbox-sends-notification.html: Added.
* platform/chromium/accessibility/aria-checkbox-sends-notification-expected.txt: Added.

Canonical link: https://commits.webkit.org/90326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101855 268f45cc-cd09-0410-ab3c-d52691b4dbfc